Improved comments parsing in method declaration. Fixed Integer.st formatting. Fixed class methods generating. Fixed compiling block not in method arguments (empty 'keywords' stack). Improved DoesNotUnderstandException message. Added controlling methods to BlockClosure class.